--- a/calculator.html
+++ b/calculator.html
@@ -9,31 +9,31 @@
   <body>
     <div class="calculator">
       <input type="text" id="display" disabled/ placeholder="0">
-      <div class="">
+      <div class="all-btn">
         <button>AC</button>
         <button>Del</button>
         <button>%</button>
         <button>/</button>
       </div>
-      <div class="">
+      <div class="all-btn">
         <button>7</button>
         <button>8</button>
         <button>9</button>
         <button>*</button>
       </div>
-      <div class="">
+      <div class="all-btn">
         <button>4</button>
         <button>5</button>
         <button>6</button>
         <button>+</button>
       </div>
-      <div class="">
+      <div class="all-btn">
         <button>1</button>
         <button>2</button>
         <button>3</button>
         <button>-</button>
       </div>
-      <div class="">
+      <div class="all-btn">
         <button>00</button>
         <button>0</button>
         <button>.</button>
